[package]
name = "bdb_parser"
version = "0.1.1"
edition = "2021"
authors = ["Jason Scatena <jason@scatena.co>"]
description = "A parser for the BDB file format"
readme = "README.md"
license = "MIT"
repository = "https://github.com/jscatena88/bdb_parser"

[lib]
name = "bdb_parser"
path = "src/lib.rs"

[[bin]]
name = "bdb_parser_bin"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4"
nom = "7.1.3"
